# Snake-init

./: .clang-format  .gitignore  CMakeLists.txt
Sources/: drm.c  drm.h  drm_connector.h  input.c  input.h  main.c  shell.c  shell.h  snake.c  snake.h  utils.c  utils.h  vec.c  vec.h  vt.c  vt.h
